src/test/ui/no_share-enum.stderr
error[E0277]: `NoSync` cannot be shared between threads safely
  --> $DIR/no_share-enum.rs:14:5
   |
LL |     bar(x);
   |     ^^^ `NoSync` cannot be shared between threads safely
   |
   = help: within `Foo`, the trait `std::marker::Sync` is not implemented for `NoSync`
   = note: required because it appears within the type `Foo`
note: required by `bar`
  --> $DIR/no_share-enum.rs:10:1
   |
LL | fn bar<T: Sync>(_: T) {}
   | ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
